--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
   },
   "homepage": "https://github.com/Whena/BoostTesting#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cuid": "^2.1.6",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-enrouten": "^1.3.0",
+    "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.4.0",
+    "mysql2": "^1.6.5",
     "pg": "^7.8.0",
     "redis": "^2.8.0",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.42.0",
+    "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^5.14.1",
